Fixed the FOUC problem (see README.md for details). Also added some comment clarifications in webpack.config.js

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -3,17 +3,12 @@ body {
 	color: navy;
 	background-color: silver;
 }
-h1 {
+h1, h2, h3 {
 	text-align: center;
 	margin:0;
 }
 h2 {
-	text-align: center;
 	margin:0 5vw;
 	padding: 0 0 1vh 0;
 	border-bottom: thin solid blue;
-}
-
-#app {
-	display: block!important;
 }
