--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,8 +1,6 @@
-body {
-	font-family: ariel;
-	color: navy;
-	background-color: silver;
-}
+/**
+ *	Custom styling for this app
+ **/
 h1, h2, h3 {
 	text-align: center;
 	margin:0;
